<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_auth_vertical_xx_large"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:scaleType="centerCrop"
            android:background="?attr/selectableItemBackground"
            android:id="@+id/img_upload"
            android:layout_width="@dimen/auth_type_size"
            android:layout_height="@dimen/auth_type_size"
            android:layout_marginBottom="@dimen/margin_auth_vertical_xx_large"
            app:layout_constraintBottom_toTopOf="@+id/tv_type"
            app:layout_constraintEnd_toEndOf="@+id/tv_type"
            app:layout_constraintStart_toStartOf="@+id/tv_type"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.ItemImage"
            app:srcCompat="@drawable/ic_upload_avatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:textAppearance="@style/TextAppearance.ChatApp.Subtitle2"
        android:drawableStart="@drawable/ic_type_two_business_icon"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/margin_auth_vertical_default"
        android:id="@+id/tv_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_auth_vertical_default"
        app:layout_constraintBottom_toTopOf="@+id/til_name"
        app:layout_constraintEnd_toEndOf="@+id/til_name"
        app:layout_constraintStart_toStartOf="@+id/til_name"
        tools:text="Type" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_auth_vertical_default"
        app:layout_constraintBottom_toTopOf="@+id/til_phone"
        app:layout_constraintEnd_toEndOf="@+id/til_phone"
        app:layout_constraintStart_toStartOf="@+id/til_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_auth_vertical_default"
        app:layout_constraintBottom_toTopOf="@+id/til_password"
        app:layout_constraintEnd_toEndOf="@+id/til_password"
        app:layout_constraintStart_toStartOf="@+id/til_password"
        app:suffixText="@string/suffix_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_auth_vertical_default"
        app:layout_constraintBottom_toTopOf="@+id/til_email"
        app:layout_constraintEnd_toEndOf="@+id/til_email"
        app:layout_constraintStart_toStartOf="@+id/til_email"
        app:prefixText="@string/prefix_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_auth_vertical_default"
        app:helperText="@string/helper_pwd"
        app:layout_constraintBottom_toTopOf="@+id/til_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/til_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/til_confirm_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pwd" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_auth_vertical_x_large"
        app:helperText="@string/helper_pwd_confirm"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_terms"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pwd_confirm" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_auth_vertical_default"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register" />

    <androidx.appcompat.widget.AppCompatTextView
        android:background="?attr/selectableItemBackground"
        android:id="@+id/btn_terms"
        android:layout_width="0dp"
        android:textAppearance="@style/TextAppearance.ChatApp.Overline"
        android:layout_height="wrap_content"
        android:text="@string/desc_register_terms"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_terms"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toEndOf="@+id/checkbox_terms"
        app:layout_constraintTop_toTopOf="@+id/checkbox_terms" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_auth_horizontal_default"
        android:layout_marginEnd="@dimen/margin_auth_horizontal_default"
        android:layout_marginBottom="@dimen/margin_auth_vertical_xx_large"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

