<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img"
        android:layout_width="@dimen/auth_image_size"
        android:layout_height="@dimen/auth_image_size"
        app:layout_constraintBottom_toTopOf="@+id/tv_helper_title"
        app:layout_constraintEnd_toEndOf="@+id/btn_change"
        app:layout_constraintStart_toStartOf="@+id/btn_change"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_pwd_forget_reset" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_helper_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_auth_vertical_large"
        android:gravity="center"
        android:text="@string/desc_pwd_forget"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintBottom_toTopOf="@+id/til_pwd_new"
        app:layout_constraintEnd_toEndOf="@+id/btn_change"
        app:layout_constraintStart_toStartOf="@+id/btn_change"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pwd_new"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:helperText="@string/helper_pwd"
        app:layout_constraintBottom_toTopOf="@+id/til_pwd_confirm"
        app:layout_constraintEnd_toEndOf="@+id/til_pwd_confirm"
        app:layout_constraintStart_toStartOf="@+id/til_pwd_confirm"
        app:layout_constraintVertical_chainStyle="packed"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pwd_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pwd_new" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pwd_confirm"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:helperText="@string/helper_pwd_confirm"
        app:layout_constraintBottom_toTopOf="@+id/btn_change"
        app:layout_constraintEnd_toEndOf="@+id/btn_change"
        app:layout_constraintStart_toStartOf="@+id/btn_change"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pwd_confirm" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_auth_horizontal_default"
        android:layout_marginEnd="@dimen/margin_auth_horizontal_default"
        android:layout_marginBottom="@dimen/margin_auth_vertical_xx_large"
        android:text="@string/btn_change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>