<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_navigation"
    app:startDestination="@id/dest_login">

    <fragment
        android:id="@+id/dest_login"
        android:name="com.galaxy_techno.uKnow.presentation.ui.auth.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/dest_top_chat" />

        <action
            android:id="@+id/action_login_to_pwd_forget"
            app:destination="@id/dest_pwd_forget">
            <argument
                android:name="phone"
                app:argType="string" />
        </action>
        <argument
            android:name="phone_existed"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/dest_otp"
        android:name="com.galaxy_techno.uKnow.presentation.ui.auth.otp.OTPFragment"
        android:label="@string/title_otp_verify"
        tools:layout="@layout/fragment_otp">
        <action
            android:id="@+id/action_otp_to_register"
            app:destination="@id/dest_register">
            <argument
                android:name="phone"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_otp_to_sheet"
            app:destination="@id/dest_sheet_phone_exist">
            <argument
                android:name="phone"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/dest_register"
        android:name="com.galaxy_techno.uKnow.presentation.ui.auth.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">
        <argument
            android:name="phone"
            app:argType="string" />
        <action
            android:id="@+id/action_register_to_terms"
            app:destination="@id/dest_terms" />
        <action
            android:id="@+id/action_register_to_home"
            app:destination="@id/dest_top_chat" />
    </fragment>
    <fragment
        android:id="@+id/dest_terms"
        android:name="com.galaxy_techno.uKnow.presentation.ui.auth.terms_conditions.TermsFragment"
        android:label="@string/title_terms"
        tools:layout="@layout/fragment_terms" />
    <fragment
        android:id="@+id/dest_pwd_reset_successful"
        android:name="com.galaxy_techno.uKnow.presentation.ui.auth.pwd_forget.PwdResetSuccessfulFragment"
        android:label="PwdResetSuccessfulFragment"
        tools:layout="@layout/fragment_password_reset_successful">
        <action
            android:id="@+id/action_successful_to_login"
            app:destination="@id/dest_login" />
    </fragment>
    <fragment
        android:id="@+id/dest_pwd_reset"
        android:name="com.galaxy_techno.uKnow.presentation.ui.auth.pwd_forget.PwdResetFragment"
        android:label="@string/desc_pwd_reset"
        tools:layout="@layout/fragment_password_reset">
        <action
            android:id="@+id/action_pwd_reset_to_successful"
            app:destination="@id/dest_pwd_reset_successful" />
    </fragment>
    <fragment
        android:id="@+id/dest_pwd_forget"
        android:name="com.galaxy_techno.uKnow.presentation.ui.auth.pwd_forget.PwdForgetFragment"
        android:label="@string/pwForget"
        tools:layout="@layout/fragment_password_forget">
        <action
            android:id="@+id/action_pwd_forget_to_reset"
            app:destination="@id/dest_pwd_reset" />
        <argument
            android:name="phone"
            app:argType="string" />
    </fragment>
    <dialog
        android:id="@+id/dest_sheet_phone_exist"
        android:name="com.galaxy_techno.uKnow.presentation.ui.auth.otp.PhoneNoAdyExistedBottomSheet"
        tools:layout="@layout/sheet_phone_no_exist">
        <action
            android:id="@+id/action_sheet_to_login"
            app:destination="@id/dest_login"
            app:popUpTo="@id/dest_login"
            app:popUpToInclusive="true">
            <argument
                android:name="phone_existed"
                app:argType="string"
                android:defaultValue="@null"
                app:nullable="true" />
        </action>
        <argument
            android:name="phone"
            app:argType="string" />
    </dialog>

</navigation>